# scoped

./: .gitignore  CONTRIBUTING.md  README.md  example  example.cpp  license.txt  scoped.h
example.dSYM/Contents/Resources/DWARF/: example
examples/: CMakeLists.txt  ex0_simple.cpp  ex1_no_singleton.cpp  ex2_caching.cpp  ex3_event_counter.cpp  ex4_decorator.cpp  ex5_dependency_injection.cpp  example.cpp
include/: scoped.h  scoped_manifest.h
presentations/: .gitkeep  Core CPP 23 Scope Sensitive Programming.pptx
tests/: .gitignore  CMakeLists.txt  test_haven.cpp  test_manifest.cpp  test_move.cpp  test_option.cpp  test_shield.cpp  test_simple.cpp  test_vector.cpp
